# Langraph-Email-Sending-Agent

./: .gitignore  main.py  pyproject.toml
app/: main.py
app/email_agent/: client.py  prompt.py  schema.py  state.py  tools.py
app/routes/: __init__.py  api.py  helpers.py
